--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "seedProd": "cross-env NODE_ENV=production node seeder.js",
+    "seed": "node seeder.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.5"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "canvas": "^2.8.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "image-clipper": "^0.4.4",
     "loading-cli": "^1.1.0",
+    "md5": "^2.3.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.10",
-    "ocr-space-api-wrapper": "^2.0.0",
-    "image-clipper": "^0.4.4",
-    "canvas": "^2.8.0"
+    "ocr-space-api-wrapper": "^2.0.0"
   }
 }
