--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "canvas": "^2.8.0",
     "chalk": "^4.1.0",
+    "dependencies": "0.0.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "image-clipper": "^0.4.4",
+    "jquery": "^3.6.0",
     "loading-cli": "^1.1.0",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
